<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, time to get this sh*t started!</string>
    <string name="app_name">Publisize.me</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="submit">Submit</string>
    <string name="pubMe">Publisize Me</string>
    <string name="password_field">***************</string>
    <string name="map">Map</string>
    <string name="score">Score: 0</string>
    <string name="promote">Promote</string>
    <string name="options">Options</string>
    <string name="events">Events</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="save">Save Changes</string>
    <string name="points">Points: 0</string>
    <string name="tPoints">Points: 0</string>
    <string name="facebook">Facebook:</string>
    <string name="twitter">Twitter:</string>
    <string name="teams">Teams</string>
    <string name="event1">Event 1</string>
    <string name="event2">Event 2</string>
    <string name="event3">Event 3</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="blah">blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</string>
    <string name="mapIt">Map It!</string>
    <string name="info">Information:</string>
    <string name="test">Test</string>
    <string name="tweet">Tweet it!</string>
    <string name="facebookIt">Facebook it!</string>
    <string name="enterText">Enter 140 characters or less to promote an event</string>
    <string name="tickets">Tickets</string>
    <string name="ticket1">Ticket 1</string>
    <string name="order">Order</string>
    <string name="creditcard">1242 0099 7667 2323</string>
    <string name="expirationdate">Expiration Date</string>
    <string name="creditcardnum">Credit Card Number</string>
    <string name="nameoncard">Name on Card</string>
    <string name="securitycode">Security Code</string>
    <string name="confirmation">Enter confirmation code</string>
    <string name="rewards">Rewards</string>
    <string name="buyticket">Buy Ticket</string>
    <string name="reward1">Reward 1</string>
    <string name="reward2">Reward 2</string>
    <string name="confirm">Confirm</string>
    <string name="auhtorize">Authorize</string>
    <string name="signIn">Sign In</string>
    <string name="fbit">Facebook It!</string>
    <string name="item">Item 1</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="placeholderAddress">253 Main St. Memphis, TN 38106</string>
    <string name="placeholdCCNumber">0010 1111 1010 1000</string>
    <string name="placeholdDate">05/12</string>
    <string name="placeholdSecurityCode">101</string>
</resources>
