<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/maplayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/event1"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="buttonAction"
        android:text="@string/back" >
    </Button>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="90dp"
        android:text="@string/blah"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="27dp"
        android:text="@string/info"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <Button
        android:id="@+id/ticketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/backButton"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="28dp"
        android:layout_marginRight="30dp"
        android:onClick="buttonAction"
        android:text="@string/buyticket" />

    <Button
        android:id="@+id/promoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ticketButton"
        android:layout_alignBottom="@+id/ticketButton"
        android:layout_marginRight="25dp"
        android:layout_toLeftOf="@+id/ticketButton"
        android:onClick="buttonAction"
        android:text="@string/promote" />

    <Button
        android:id="@+id/mapItButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignTop="@+id/promoteButton"
        android:onClick="buttonAction"
        android:text="@string/mapIt" />

</RelativeLayout>
