<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/username" android:id="@+id/textView2" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginTop="121dp"></TextView>
<EditText android:id="@+id/editText1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/textView2" android:layout_alignParentLeft="true"></EditText>
<TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/password" android:id="@+id/textView3" android:layout_height="wrap_content" android:layout_below="@+id/editText1" android:layout_alignParentLeft="true"></TextView>
<EditText android:id="@+id/editText2" android:inputType="textPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/textView3" android:layout_alignParentLeft="true" android:text="@string/password_field"></EditText>
<Button android:id="@+id/loginButton" android:layout_height="wrap_content" android:layout_below="@+id/editText2" android:layout_alignParentRight="true" android:onClick="buttonAction" android:text="@string/login" android:layout_width="100dp"></Button>
<TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/pubMe" android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginTop="38dp"></TextView>

</RelativeLayout>
