<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:text="@string/points"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="125dp"
        android:onClick="buttonAction"
        android:text="@string/options" >
    </Button>

    <Button
        android:id="@+id/eventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/optionsButton"
        android:layout_alignBottom="@+id/optionsButton"
        android:layout_centerHorizontal="true"
        android:onClick="buttonAction"
        android:text="@string/events" >
    </Button>

    <Button
        android:id="@+id/rewardsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eventsButton"
        android:layout_alignBottom="@+id/eventsButton"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/eventsButton"
        android:onClick="buttonAction"
        android:text="@string/rewards" />

</RelativeLayout>
