<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/rewardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="83dp"
        android:layout_marginTop="89dp"
        android:onClick="buttonAction"
        android:text="@string/reward1" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="buttonAction"
        android:text="@string/back" />

    <Button
        android:id="@+id/rewardButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rewardButton"
        android:layout_alignBottom="@+id/rewardButton"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/rewardButton"
        android:onClick="buttonAction"
        android:text="@string/reward2" />

</RelativeLayout>